Removing logo CSS. Left aligning to do away with menu bug.

--- a/assets/yokomono.css
+++ b/assets/yokomono.css
@@ -2,19 +2,9 @@ body {
 	background-color: rgb(102, 102, 102);
 }
 
-img.logo {
-
-	position: absolute;
-	left: 1006px;
-	top: 29px;
-	width: 250px; 
-
-}
-
 div.synth {
 
 	width:1280px;
 	height:680px;
-	margin: 0 auto;
 
 }
